# client-pyside6

./: .gitignore  .pre-commit-config.yaml  README.md  index.py  prebuild.py  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build-from-latest-dependency.yml  build.yml  windows-build-from-latest-dependency.yml
core/: color.py  singleton.py
core/settings/: __init__.py  base.py  keys.py  values.py
tests/ui/navigation/: test_navhost.py
ui/components/mainwindow/: animatedstackednavitemwidgets.py  navsidebar.py
ui/designer/: mainwindow.ui  mainwindow_ui.py
ui/designer/components/: chartAndScoreInput.ui  chartAndScoreInput_ui.py  chartSelector.ui  chartSelector_ui.py  dbTableViewer.ui  dbTableViewer_ui.py  fileSelector.ui  fileSelector_ui.py  ocrQueue.ui  ocrQueueOptionsDialog.ui  ocrQueueOptionsDialog_ui.py  ocrQueue_ui.py  scoreEditor.ui  scoreEditor_ui.py  songIdSelector.ui  songIdSelector_ui.py
ui/designer/components/settings/: resettableItem.ui  resettableItem_ui.py
ui/designer/settings/: settingsBaseWidget.ui  settingsBaseWidget_ui.py  settingsDefault.ui  settingsDefault_ui.py
ui/designer/tabs/: tabAbout.ui  tabAbout_ui.py  tabDbEntry.ui  tabDbEntry_ui.py  tabInputScore.ui  tabInputScore_ui.py  tabOcr.ui  tabOcrDisabled.ui  tabOcrDisabled_ui.py  tabOcrEntry.ui  tabOcrEntry_ui.py  tabOcr_ui.py  tabOverview.ui  tabOverview_ui.py  tabSettings.ui  tabSettings_ui.py  tabToolsEntry.ui  tabToolsEntry_ui.py
ui/designer/tabs/tabDb/: tabDb_ChartInfoEditor.ui  tabDb_ChartInfoEditor_ui.py  tabDb_Manage.ui  tabDb_Manage_ui.py  tabDb_RemoveDuplicateScores.ui  tabDb_RemoveDuplicateScores_ui.py
ui/designer/tabs/tabOcr/: tabOcr_B30.ui  tabOcr_B30_ui.py  tabOcr_BuildPHashDatabase.ui  tabOcr_BuildPHashDatabase_ui.py  tabOcr_Device.ui  tabOcr_Device_ui.py
ui/designer/tabs/tabTools/: tabTools_Andreal.ui  tabTools_Andreal_ui.py  tabTools_ChartRecommend.ui  tabTools_ChartRecommend_ui.py  (+4 more)
ui/extends/: ocr.py  settings.py
ui/extends/components/: chartSelector.py  dbTableViewer.py  ocrQueue.py
ui/extends/ocr/: __init__.py  build_phash.py  dependencies.py
ui/extends/shared/: color.py  cv2_utils.py  data.py  database.py  language.py  settings.py  singleton.py  utils.py
ui/extends/tabs/: tabOcr.py
ui/implements/: mainwindow.py
ui/implements/components/: __init__.py  arcaeaScoreLineEdit.py  chartAndScoreInput.py  chartSelector.py  dbTableViewer.py  devicesComboBox.py  elidedLabel.py  fileSelector.py  focusSelectAllLineEdit.py  ocrQueue.py  ocrQueueOptionsDialog.py  playRatingCalculator.py  ratingClassRadioButton.py  ratingClassSelector.py  scoreEditor.py  songIdSelector.py
ui/implements/settings/: settingsAndreal.py  settingsBaseWidget.py  settingsDefault.py  settingsGeneral.py  settingsOcr.py
ui/implements/tabs/: tabAbout.py  tabDbEntry.py  tabInputScore.py  tabOcr.py  tabOcrDisabled.py  tabOcrEntry.py  tabOverview.py  tabSettings.py  tabToolsEntry.py
ui/navigation/: navhost.py  navitem.py  navitemwidgets.py  navsidebar.py
ui/resources/: partnerModifiers.json  resources.qrc
ui/resources/images/: images.qrc
ui/resources/lang/: en_US.ts  extract.py  zh_CN.ts
ui/resources/translations/: en_US.ts  translations.qrc  zh_CN.ts
ui/startup/: databaseChecker.py  databaseChecker.ui  databaseChecker_ui.py
ui/widgets/: slidingstackedwidget.py
(+28 files in other folders)
