[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcaea-offline-pyside-ui"
version = "0.3.8"
authors = [{ name = "283375", email = "log_283375@163.com" }]
description = "No description."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "arcaea-offline==0.2.2",
  "arcaea-offline-ocr==0.0.99",
  "exif==1.6.0",
  "PySide6==6.5.2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/ArcaeaOffline/client-pyside6"
"Bug Tracker" = "https://github.com/ArcaeaOffline/client-pyside6/issues"

[tool.black]
force-exclude = '''
(
  ui/designer
  | .*_ui.py
  | .*_rc.py
)
'''

[tool.isort]
profile = "black"
extend_skip = ["ui/designer"]
extend_skip_glob = ["*_ui.py", "*_rc.py"]

[tool.pyright]
ignore = ["**/__debug*.*"]
