[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arcaea-offline-pyside-ui"
version = "0.3.9"
authors = [{ name = "283375", email = "log_283375@163.com" }]
description = "No description."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "arcaea-offline==0.2.2",
  "arcaea-offline-ocr==0.0.99",
  "exif==1.6.0",
  "PySide6==6.5.2",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/ArcaeaOffline/client-pyside6"
"Bug Tracker" = "https://github.com/ArcaeaOffline/client-pyside6/issues"

[tool.ruff]
exclude = ["*_ui.py", "*_rc.py"]

[tool.ruff.lint]
# Full list: https://docs.astral.sh/ruff/rules
select = [
  "E",   # pycodestyle (Error)
  "W",   # pycodestyle (Warning)
  "F",   # pyflakes
  "I",   # isort
  "PL",  # pylint
  "N",   # pep8-naming
  "A",   # flake8-builtins
  "DTZ", # flake8-datetimez
  "LOG", # flake8-logging
  "Q",   # flake8-quotes
  "G",   # flake8-logging-format
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
]
ignore = [
  "E501", # line-too-long
  "N802", # invalid-function-name
  "N803", # invalid-argument-name
  "N806", # non-lowercase-variable-in-function
  "N815", # mixed-case-variable-in-class-scope
  "N816", # mixed-case-variable-in-global-scope
]

[tool.pyright]
ignore = ["**/__debug*.*"]
